@@ -1,5 +1,6 @@
 29.jun (la)
-      - fix #6264 :Chordnames not transposed on copy-paste or concert pitch
+      - fix #6264: Chordnames not transposed on copy-paste or concert pitch
+      - fix #6283: R key does not work as expected in drum staff
 28.jun (ws)
       - free memory after removing score (#6164)
 27.jun (la)
